--- a/study-js/index.html
+++ b/study-js/index.html
@@ -16,13 +16,13 @@
         //         JS Engine: Single Execution Thread -> Event Queue -> Event -> Callback Function
         window.onload = app; // app function --> ONLOAD_EVENT
         function app() {
-            let counter = 0;
-            let spanCounter = document.querySelector("#counter");
-            setInterval(timeout_callback, 1000); // ON_TIMEOUT_EVENT -> timeout_callback
-            let timeout_callback = function () {
+            function timeout_callback() {
                 counter++;
                 spanCounter.innerHTML = counter.toString();
             };
+            let counter = 0;
+            let spanCounter = document.querySelector("#counter");
+            setInterval(timeout_callback, 1000); // ON_TIMEOUT_EVENT -> timeout_callback
         }
     </script>
 </head>
