--- a/mastermind-game/game.html
+++ b/mastermind-game/game.html
@@ -40,6 +40,10 @@
                 <span id="max-tries" class="badge badge-danger">10</span>
             </div>
             <div class="form-group">
+                <label for="counter">Counter:</label>
+                <span id="counter" class="badge badge-danger">60</span>
+            </div>
+            <div class="form-group">
                 <label for="guess">Guess:</label>
                 <input type="text"
                        id="guess"
