--- a/mastermind-game/game.html
+++ b/mastermind-game/game.html
@@ -7,12 +7,12 @@
         @import "css/bootstrap.css";
         @import "css/bootstrap-theme.css";
     </style>
-    <script src="js/utils.js"></script>
-    <script src="js/move.js"></script>
-    <script src="js/mastermind.js"></script>
-    <script src="js/statistics.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/app.js"></script>
+    <script type="module" src="js/app.js"></script>
+    <script type="module" src="js/statistics.js"></script>
+    <script type="module" src="js/game.js"></script>
+    <script type="module" src="js/mastermind.js"></script>
+    <script type="module" src="js/move.js"></script>
+    <script type="module" src="js/utils.js"></script>
 </head>
 <body>
 <p></p>
