--- a/mastermind-game/game.html
+++ b/mastermind-game/game.html
@@ -5,7 +5,6 @@
     <title>Mastermind Game</title>
     <style>
         @import "css/bootstrap.css";
-        @import "css/bootstrap-theme.css";
     </style>
     <script type="module" src="js/app.js"></script>
     <script type="module" src="js/statistics.js"></script>
@@ -13,6 +12,7 @@
     <script type="module" src="js/mastermind.js"></script>
     <script type="module" src="js/move.js"></script>
     <script type="module" src="js/utils.js"></script>
+    <script type="module" src="js/router.js"></script>
 </head>
 <body>
 <p></p>
@@ -23,32 +23,41 @@
         </div>
         <div class="card-body">
             <div class="form-group">
-                <label for="game-level">Game Level:</label>
-                <span id="game-level" class="badge badge-info">3</span>
+                <label class="form-label" for="game-level">Game Level:</label>
+                <span id="game-level" class="badge alert-info">3</span>
             </div>
             <div class="form-group">
-                <label for="lives">Lives:</label>
-                <span id="lives" class="badge badge-primary">3</span>
+                <div class="input-group mb-3">
+                    <label class="form-label" for="lives-icons">Lives:</label>
+                    <div  class="input-group-append" id="lives-icons"></div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="tries">Tries:</label>
-                <span id="tries" class="badge badge-warning">0</span>
+                <span id="tries" class="badge alert-warning">0</span>
             </div>
             <div class="form-group">
                 <label for="max-tries">Max Tries:</label>
-                <span id="max-tries" class="badge badge-danger">10</span>
+                <span id="max-tries" class="badge alert-danger">10</span>
             </div>
             <div class="form-group">
-                <label for="counter">Counter:</label>
-                <span id="counter" class="badge badge-danger">60</span>
+                <label class="form-label" for="counter">Counter:</label>
+                <span id="counter" class="badge alert-danger">60</span>
+                <div class="progress">
+                    <div class="progress-bar" id="counterProgressBar" style="width: 100%" role="progressbar"></div>
+                </div>
             </div>
             <div class="form-group">
-                <label for="guess">Guess:</label>
-                <input type="text"
-                       id="guess"
-                       value="123"
-                       class="form-control"></input>
-                <button id="playButton" class="btn btn-success">Play</button>
+                <label class="form-label" for="guess">Guess:</label>
+                <div class="input-group mb-3">
+                    <input type="text"
+                           id="guess"
+                           value="123"
+                           class="form-control"></input>
+                    <div class="input-group-append">
+                        <button id="playButton" class="btn btn-success">Play</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -60,17 +69,16 @@
         <div class="card-body">
             <table class="table table-bordered table-hover table-striped table-responsive">
                 <thead>
-                    <tr>
-                       <th>Guess</th>
-                       <th>Evaluation</th>
-                    </tr>
+                <tr>
+                    <th>Guess</th>
+                    <th>Evaluation</th>
+                </tr>
                 </thead>
                 <tbody id="moves">
 
                 </tbody>
             </table>
         </div>
-
     </div>
 </div>
 </body>
