--- a/mastermind-game/game.html
+++ b/mastermind-game/game.html
@@ -27,12 +27,6 @@
                 <span id="game-level" class="badge alert-info">3</span>
             </div>
             <div class="form-group">
-                <div class="input-group mb-3">
-                    <label class="form-label" for="lives-icons">Lives:</label>
-                    <div  class="input-group-append" id="lives-icons"></div>
-                </div>
-            </div>
-            <div class="form-group">
                 <label for="tries">Tries:</label>
                 <span id="tries" class="badge alert-warning">0</span>
             </div>
@@ -45,6 +39,12 @@
                 <span id="counter" class="badge alert-danger">60</span>
                 <div class="progress">
                     <div class="progress-bar" id="counterProgressBar" style="width: 100%" role="progressbar"></div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group mb-3">
+                    <label class="form-label" for="lives-icons">Lives:</label>
+                    <div  class="input-group-append" id="lives-icons"></div>
                 </div>
             </div>
             <div class="form-group">
@@ -75,9 +75,24 @@
                 </tr>
                 </thead>
                 <tbody id="moves">
-
                 </tbody>
             </table>
+        </div>
+    </div>
+    <p></p>
+    <div class="card">
+        <div class="card-header">
+            <h4 class="card-title">Game Statistics</h4>
+        </div>
+        <div class="card-body">
+            <div class="form-group">
+                <label class="form-label" for="wins">Wins:</label>
+                <span id="wins" class="badge alert-primary"></span>
+            </div>
+            <div class="form-group">
+                <label class="form-label" for="loses">Loses:</label>
+                <span id="loses" class="badge alert-danger"></span>
+            </div>
         </div>
     </div>
 </div>
